reasoning_transformations/CRUXEval/Transformations/logs/sample_372.log
STARTING AT 2024-10-19 22:24:43.712137
[START] processing file: sample_372
*Running tests for: sample_372
 
Result: ['tests_pass']
tests_pass sample_372 /home/yang/Benchmark/dataset/cruxeval/code//sample_372.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_372
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_372
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_372
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_372", line 8
    nonlocal newi_1
    ^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'newi_1' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_372", line 8\n    nonlocal newi_1\n    ^^^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'newi_1\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_372
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_372
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_372
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_372
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_372
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_372
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_372
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_372
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_372.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_372.py
*Running tests for: sample_372
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_372.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_372',
  'genetic_algorithm': None,
  'original_code': 'def f(list_, num):\n'
                   '    temp = []\n'
                   '    for i in list_:\n'
                   "        i = num // 2 * ('%s,' % i)\n"
                   '        temp.append(i)\n'
                   '    return temp',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_372.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_372.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_372.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 5.428193,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      "    base64.b64encode(b'56615245499634859192')\n"
                      '    ttest_ind([100, 50, 47], [22, 79, 58])\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc0_17(variable_6_17, newi_1, variable_7_17, '
                      'num):\n'
                      "    parse('2024-10-19 22:24:47')\n"
                      '    return num // variable_6_17 * (variable_7_17 % '
                      'newi_1)\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(list_, num):\n'
                      '    datetime.datetime.now()\n'
                      '    time.sleep(0.09)\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      '    Fernet.generate_key()\n'
                      '    shuffle([22, 49, 70])\n'
                      '    try:\n'
                      '        temp = [[]][0]\n'
                      '        LoopChecker13 = 114\n'
                      '        LoopChecker23 = 113\n'
                      '        for LoopIndexOut in range(LoopChecker13 // '
                      'LoopChecker23):\n'
                      '            for newi_1 in list_:\n'
                      '                variable_6_17 = 2\n'
                      "                variable_7_17 = '%s,'\n"
                      '                newi_1 = newFunc0_17(variable_6_17, '
                      'newi_1, variable_7_17, num)\n'
                      '                temp.append(newi_1)\n'
                      '        else:\n'
                      '            pass\n'
                      '        return temp\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_372. Total Time: 5.428193
END AT 2024-10-19 22:24:49.141744
